<resources>
    <string name="app_name">kmerdelices</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_food_list">Liste des menus</string>


    <string name="popular_categories">Catégories populaires</string>
    <string name="best_deals">Meilleures affaires</string>
    <string name="menu_menu">Catégories</string>
    <string name="menu_food_detail">"Details "</string>
    <string name="a_propos">A propos</string>
    <string name="aide">Aide</string>
    <string name="k_merd_lices">K\'merDélices</string>
    <string name="licence">Licence</string>
    <string name="application">Application</string>
    <string name="version">Kylie V3</string>
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inscrivez_vous">Inscrivez - vous</string>
    <string name="size">Size</string>
    <string name="add_on">Addon</string>


    <string name="menu_cart">Panier</string>
    <string name="menu_restaurant">Restaurants</string>
    <string name="menu_boulangerie">Boulangeries</string>
    <string name="menu_restaurant_detail">Detail restaurant</string>
    <string name="menu_boulangerie_detail">Detail boulangerie</string>
    <string name="restaurant_menu">Menus disponibles</string>
    <string name="menu_restaurant_list">Liste restaurants</string>
    <string name="menu_boulangerie_list">Liste boulangeries</string>
    <string name="action_apparence">Apparence</string>
    <string name="menu_account">Mon compte</string>
    <string name="ingredient">Ingredients</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="telephone">Téléphone</string>
    <string name="description_restaurant">Description du restaurant</string>
    <string name="boulangerie_menu">Produits disponibles</string>

    <string name="access_token" translatable="false">pk.eyJ1IjoidG9nZXR0ZWNoIiwiYSI6ImNrOGdlZHhqZDAwbjgzbnJ3ZGxqcWdsYXUifQ.kyhj_YBygcaME-ipVng1kw</string>
    <string name="purple_map_style" translatable="false">mapbox://styles/mapbox/cj7bww7is2f4i2rnwyxkzpwu7</string>
    <string name="blue_map_style" translatable="false">mapbox://styles/mapbox/cj7bwwv3caf7l2spgukxm8bwv</string>
    <string name="terminal_map_style" translatable="false">mapbox://styles/mapbox/cj62n87yx3mvi2rp93sfp2w9z</string>
    <string name="map_view">Map view</string>
    <string name="failure_to_load_file">Failure to load the local file of locations. Please try reloading the app.</string>
    <string name="mock_location_title">Fake device location</string>
    <string name="select_a_theme">Tap on a theme</string>
    <string name="no_internet_message">Route drawing not possible because there\'s no internet connection!</string>
    <string name="failure_to_retrieve">Failure to retrieve the navigation route!</string>

    <!-- Single card -->
    <string name="hours">Horaires</string>
    <string name="phone">Téléphone</string>
    <string name="distance">Km</string>

    <string name="menu_explorer">Explorer</string>


    <string name="facebook_app_id">333434414407660</string>
    <string name="fb_login_protocol_scheme">fb333434414407660</string>

    <string name="inscrivez_vous_et_econimisez">Connectez-vous et éconimisez</string>
    <string name="moto">Profiter de notre guide cuisine,\ndécouvrer toutes les recettes et les meilleurs 100 % made in Cameroun.</string>


    <string name="web_client_id">148950114521-90ur901qclrb4qsfj2g87p0pl1ncf6ch.apps.googleusercontent.com</string>

</resources>
