<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.togettech.kmerdelices.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.togettech.kmerdelices.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_restaurant"
        android:name="com.togettech.kmerdelices.ui.restaurant.RestaurantFragment"
        android:label="@string/menu_restaurant"
        tools:layout="@layout/fragment_restaurant" />

    <fragment
        android:id="@+id/nav_boulangerie"
        android:name="com.togettech.kmerdelices.ui.boulangerie.BoulangerieFragment"
        android:label="@string/menu_boulangerie"
        tools:layout="@layout/fragment_boulangerie" />

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.togettech.kmerdelices.ui.fooddetail.FoodDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_food_detail" />

    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.togettech.kmerdelices.ui.foodlist.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list" />

    <fragment
        android:id="@+id/nav_restaurant_list"
        android:name="com.togettech.kmerdelices.ui.restaurant.RestaurantFragment"
        android:label="@string/menu_restaurant_list"
        tools:layout="@layout/fragment_restaurant" />

    <fragment
        android:id="@+id/nav_restaurant_detail"
        android:name="com.togettech.kmerdelices.ui.restaurant.detail.RestaurantDetailFragment"
        android:label="@string/menu_restaurant_detail"
        tools:layout="@layout/fragment_restaurant_detail" />

    <fragment
        android:id="@+id/nav_boulangerie_list"
        android:name="com.togettech.kmerdelices.ui.boulangerie.BoulangerieFragment"
        android:label="@string/menu_boulangerie_list"
        tools:layout="@layout/fragment_boulangerie" />

    <fragment
        android:id="@+id/nav_boulangerie_detail"
        android:name="com.togettech.kmerdelices.ui.boulangerie.detail.BoulangerieDetailFragment"
        android:label="@string/menu_boulangerie_detail"
        tools:layout="@layout/fragment_boulangerie_detail" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.togettech.kmerdelices.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_licence"
        android:name="com.togettech.kmerdelices.ui.licence.LicenceFragment"
        android:label="@string/k_merd_lices"
        tools:layout="@layout/fragment_licence" />




</navigation>