<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorWhiteDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:fitsSystemWindows="true"
            app:contentScrim="#0e0d0e"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/user_profil"
                android:scaleType="centerCrop"
                android:contentDescription="@null"
                app:layout_collapseMode="parallax"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/username"
                        android:layout_marginTop="8dp"
                        android:padding="12dp"
                        android:text="@string/username"
                        android:fontFamily="@font/brandon_medium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/email"
                        android:paddingLeft="12dp"
                        android:text="@string/email"
                        android:fontFamily="@font/brandon_medium"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                        android:id="@+id/phone"
                        android:paddingLeft="12dp"
                        android:paddingBottom="12dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/telephone"
                        android:fontFamily="@font/brandon_medium"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <LinearLayout
                        android:id="@+id/layout_price"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandon_medium"
                        android:text="@string/size"
                        android:textSize="22sp"/>

                    <RadioGroup
                        android:id="@+id/rdi_groupe_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                android:visibility="gone"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/brandon_medium"
                            android:text="@string/add_on"
                            android:textSize="22sp"/>

                        <ImageView
                            android:id="@+id/img_add_addon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_add_box_black"
                            android:tint="@color/colorAccent"
                            android:layout_marginStart="4dp"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_user_selected_addon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="visible"
                android:text="Déconnexion"
                android:textColor="@android:color/white"
                app:cornerRadius="4dp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_rating"
        app:backgroundTint="@android:color/white"
        android:src="@drawable/ic_edit_black"
        app:elevation="6dp"
        android:visibility="visible"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|start"
        app:pressedTranslationZ="12dp"
        app:useCompatPadding="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>